--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,7 @@
                 var compilerVersion = $('#versions').val()
                 var bin = document.querySelector('#bin').checked;
                 var abi = document.querySelector('#abi').checked;
-                var contract = $('#myContract').val()
                 var contractPaste = $('#contractPaste').val()
-                alert(contractPaste)
                 $.ajax({
                     url: "/join",
                     type: "POST",
@@ -32,20 +30,34 @@
             <label for="version">Choose the compiler version:</label>
             <select name="version" id="versions">
               <option value="0.8.14">0.8.14</option>
+              <option value="0.8.13">0.8.13</option>
+              <option value="0.8.12">0.8.12</option>
+              <option value="0.8.11">0.8.11</option>
+              <option value="0.8.10">0.8.10</option>
+              <option value="0.8.9">0.8.9</option>
+              <option value="0.8.8">0.8.8</option>
+              <option value="0.8.7">0.8.7</option>
+              <option value="0.8.6">0.8.6</option>
+              <option value="0.8.5">0.8.5</option>
+              <option value="0.8.4">0.8.4</option>
+              <option value="0.8.3">0.8.3</option>
+              <option value="0.8.2">0.8.2</option>
+              <option value="0.8.0">0.8.0</option>
             </select>
             <br><br>
+
             <label for="output_values">Choose the output values required:</label>
             <input type="checkbox" id="bin" name="bin" value="bin">
             <label for="bin">bin</label>
             <input type="checkbox" id="abi" name="abi" value="abi">
             <label for="abi">abi</label>
             <br><br>
-            <label for="contract">Upload the contract file:</label>
-            <input type="file" id="myContract" name="contractname">
+
+            <label for="contractPaste">Paste your smart contract below:</label>
+            <br>
+            <textarea type="text" style="width: 1000px; height: 500px;" id="contractPaste"></textarea>
             <br><br>
-            <label for="contractPaste">Paste your smart contract here:</label>
-            <input type="text" style="width: 1000px; height: 500px;" id="contractPaste">
-            <br><br>
+
             <button id="clicked" onclick="myFunction()">Submit</button>
         </p>
         <div class="show-data"></div>
