--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,15 @@
-<html>
+<!DOCTYPE html>
+<!--Code by Divinector (www.divinectorweb.com)-->
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <title>Solidity Compiler GUI</title>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">  
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script>
             function myFunction() {
-                var compilerVersion = $('#versions').val()
+                var compilerVersion = $('#compiler-versions').val()
                 var bin = document.querySelector('#bin').checked;
                 var abi = document.querySelector('#abi').checked;
                 var contractPaste = $('#contractPaste').val()
@@ -26,40 +32,49 @@
         </script>
     </head>
     <body>
-        <p>
-            <label for="version">Choose the compiler version:</label>
-            <select name="version" id="versions">
-              <option value="0.8.14">0.8.14</option>
-              <option value="0.8.13">0.8.13</option>
-              <option value="0.8.12">0.8.12</option>
-              <option value="0.8.11">0.8.11</option>
-              <option value="0.8.10">0.8.10</option>
-              <option value="0.8.9">0.8.9</option>
-              <option value="0.8.8">0.8.8</option>
-              <option value="0.8.7">0.8.7</option>
-              <option value="0.8.6">0.8.6</option>
-              <option value="0.8.5">0.8.5</option>
-              <option value="0.8.4">0.8.4</option>
-              <option value="0.8.3">0.8.3</option>
-              <option value="0.8.2">0.8.2</option>
-              <option value="0.8.0">0.8.0</option>
-            </select>
-            <br><br>
-
-            <label for="output_values">Choose the output values required:</label>
-            <input type="checkbox" id="bin" name="bin" value="bin">
-            <label for="bin">bin</label>
-            <input type="checkbox" id="abi" name="abi" value="abi">
-            <label for="abi">abi</label>
-            <br><br>
-
-            <label for="contractPaste">Paste your smart contract below:</label>
+        <header>
+            <div class="welcome-text">
+                <h1>Solidity <span>Compiler</span></h1>
+            </div>
+        </header>
+        <div class="dropdown">
+                <label for="compiler-versions">Choose a compiler version:</label><br>
+                <select name="compiler-versions" id="compiler-versions">
+                    <option value="0.8.14">0.8.14</option>
+                    <option value="0.8.13">0.8.13</option>
+                    <option value="0.8.12">0.8.12</option><
+                    <option value="0.8.11">0.8.11</option>
+                    <option value="0.8.10">0.8.10</option>
+                    <option value="0.8.9">0.8.9</option>
+                    <option value="0.8.8">0.8.8</option>
+                    <option value="0.8.7">0.8.7</option>
+                    <option value="0.8.6">0.8.6</option>
+                    <option value="0.8.5">0.8.5</option>
+                    <option value="0.8.4">0.8.4</option>
+                    <option value="0.8.3">0.8.3</option>
+                    <option value="0.8.2">0.8.2</option>
+                    <option value="0.8.1">0.8.1</option>
+                    <option value="0.8.0">0.8.0</option>
+                </select>
+        </div>
+        <div class="checkbox">
+            <label for="outputvalues">Choose the output values required:</label>
+            <div>
+                <input type="checkbox" id="bin" value="bin">
+                <label for="checkbtn">bin</label>
+            </div>
+            <div>
+                <input type="checkbox" id="abi" value="abi">
+                <label for="checkbtn1">abi</label>
+            </div>
+        </div>
+        <div class="text">
+            <label for="text">Paste your smart contract here:</label>
             <br>
-            <textarea type="text" style="width: 1000px; height: 500px;" id="contractPaste"></textarea>
-            <br><br>
-
-            <button id="clicked" onclick="myFunction()">Submit</button>
-        </p>
+            <textarea type="text" style="width: 500px; height: 300px;" id="contractPaste"></textarea>
+            <br>
+            <button class="inputbtn" id="clicked" onclick="myFunction()">Submit</button>
+        </div>
         <div class="show-data"></div>
     </body>
 </html>
