--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -26,13 +26,14 @@ header {
 	text-transform: uppercase;
 	font-size: 60px;
 	top: -50px;
-
 }
 .welcome-text h1 span {
 	color: #00fecb;
 }
-.showdata {
+.show-data {
 	top: -20px;
 	text-align: center;
+	margin: 0 auto;
+	right: 50px;
 }
 
