--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,9 @@
       </div>
     </div>
     <div class="text">
-      <label for="text">Paste your smart contract here:</label>
+      <label for="text">
+        Paste your smart contract here (make sure compiler version matches):
+      </label>
       <br />
       <textarea
         type="text"
