--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,8 @@
     <div class="dropdown">
       <label for="compiler-versions">Choose a compiler version:</label><br />
       <select name="compiler-versions" id="compiler-versions">
+        <option value="0.8.17">0.8.17</option>
+        <option value="0.8.16">0.8.16</option>
         <option value="0.8.15">0.8.15</option>
         <option value="0.8.14">0.8.14</option>
         <option value="0.8.13">0.8.13</option>
