--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,39 +1,39 @@
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 body {
-	font-family: 'Poppins', sans-serif;
-	background-color:black;
-	color: white;
-	text-align: center;
+  font-family: "Poppins", sans-serif;
+  background-color: black;
+  color: white;
+  text-align: center;
 }
 header {
-	position: relative;
-	background-color:black;
+  position: relative;
+  background-color: black;
 }
 .dropdown {
-	color:white;
+  color: white;
 }
 .welcome-text {
-	position: relative;
-	text-align: center;
-	background-color:black;
+  position: relative;
+  text-align: center;
+  background-color: black;
 }
 .welcome-text h1 {
-	text-align: center;
-	color: #fff;
-	text-transform: uppercase;
-	font-size: 60px;
-	top: -50px;
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 60px;
+  top: -50px;
 }
 .welcome-text h1 span {
-	color: #00fecb;
+  color: #00fecb;
 }
 .show-data {
-	top: -20px;
-	text-align: center;
-	margin: 0 auto;
-	right: 50px;
+  top: -20px;
+  text-align: center;
+  margin: 0 auto;
+  right: 50px;
+  padding-bottom: 100px;
 }
-
